--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "seedrandom": "^2.4.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
